--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="css/main.css" />
+		<link rel="stylesheet" href="src/css/main.css" />
 		<title>Portfolio</title>
 	</head>
 	<body>
@@ -45,7 +45,7 @@
 					</div>
 					<div class="main__section-one__picture">
 						<img
-							src="img/prof.jpg"
+							src="src/img/prof.jpg"
 							alt=""
 							class="main__section-one__picture__profile-pic"
 						/>
@@ -54,7 +54,7 @@
 				<div class="main__section-two">
 					<div class="main__section-two__picture">
 						<img
-							src="img/study.jpg"
+							src="src/img/study.jpg"
 							alt=""
 							class="main__section-two__picture__image"
 						/>
@@ -129,7 +129,7 @@
 					</div>
 					<div class="main__section-two-b__picture">
 						<img
-							src="img/keyboard.JPG"
+							src="src/img/keyboard.JPG"
 							alt=""
 							class="main__section-two-b__picture__image"
 						/>
@@ -169,7 +169,7 @@
 					</div>
 					<div class="main__section-three__picture">
 						<img
-							src="img/monitor.JPG"
+							src="src/img/monitor.JPG"
 							alt=""
 							class="main__section-three__picture__image"
 						/>
@@ -191,7 +191,7 @@
 				<div class="main__section-five">
 					<div class="main__section-five__picture">
 						<img
-							src="img/coding.jpg"
+							src="src/img/coding.jpg"
 							alt=""
 							class="main__section-five__picture__image"
 						/>
@@ -239,7 +239,7 @@
 					</div>
 					<div class="main__section-six__picture">
 						<img
-							src="img/studio.JPG"
+							src="src/img/studio.JPG"
 							alt=""
 							class="main__section-six__picture__image"
 						/>
@@ -321,7 +321,7 @@
 										</g></svg
 								></a>
 								<a href="https://frontendmasters.com/" class="link"
-									><img class="link-pic" src="img/fr.jpg" alt=""
+									><img class="link-pic" src="src/img/fr.jpg" alt=""
 								/></a>
 							</div>
 							<h2 class="h2">Kurssi</h2>
@@ -342,7 +342,7 @@
 					</div>
 					<div class="main__section-seven__picture">
 						<img
-							src="img/plan.jpg"
+							src="src/img/plan.jpg"
 							alt=""
 							class="main__section-seven__picture__image"
 						/>
@@ -372,7 +372,7 @@
 					</div>
 					<div class="main__section-eight__picture">
 						<img
-							src="img/job.jpg"
+							src="src/img/job.jpg"
 							alt=""
 							class="main__section-eight__picture__image"
 						/>
@@ -381,7 +381,7 @@
 				<div class="main__section-nine">
 					<div class="main__section-nine__picture">
 						<img
-							src="img/business.jpg"
+							src="src/img/business.jpg"
 							alt=""
 							class="main__section-nine__picture__image"
 						/>
