--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
 								full-stack kehittäjänä. Työssäni syväntäsin minun koodarin
 								taidot ja opin paljon uusia asioita mm. pilvipalveluita,
 								tietokannan hallintaa, UI suunnittelua ja graafinen
-								suunnittelua. Tällä hetkellä etsin työtä ohjelmoiana, olen
-								erityisesti kiinnostunut front-end puolelta.
+								suunnittelua.
 							</p>
 						</div>
 					</div>
@@ -216,6 +215,18 @@
 								Englanti - B2 <br />
 								Suomi - B2
 							</p>
+							<p class="main__section-five__content__text-container-text">
+								<b><strong>Referenssi/opiskelu projektit</strong></b>
+							</p>
+							<p>
+								<a href="https://miklosoravecz.github.io/LutUniProject/">Css, Sass, Html: Ravintolan verkkosivu</a>
+							</p>
+							<p>
+							<a href="https://github.com/miklosoravecz/BlogZone">MERN-stack project</a>
+							</p>
+							<p>
+							<a href="https://github.com/miklosoravecz/Angular-Auth-App">MEAN-stack project</a>
+						</p>
 						</div>
 					</div>
 				</div>
@@ -245,221 +256,29 @@
 						/>
 					</div>
 				</div>
-				<div class="devider"></div>
-				<div class="main__section-seven">
-					<div class="main__section-seven__content">
-						<h1 class="main__section-seven__content__title">Suunnitelmat</h1>
-						<div class="main__section-seven__content__text-container">
-							<h2 class="h2">Ohjelmointi</h2>
-							<p class="main__section-seven__content__text-container-text">
-								Haluaisin oppia lisää teknologiat eri kanavailla. Adobe
-								Illustrator, SVG, lisää ohjelmoinnin kieltä esimerkiksi Python
-								ja Linux. Online kurssit löytyvät youtubeilla, www.udemy.com ja
-								www.frontendmasters.com sivuilla.
-							</p>
-							<div class="links">
-								<a href="https://www.udemy.com/" class="link">
-									<svg
-										width="90px"
-										height="90px"
-										viewBox="0 -183 512 512"
-										version="1.1"
-										xmlns="http://www.w3.org/2000/svg"
-										xmlns:xlink="http://www.w3.org/1999/xlink"
-										preserveAspectRatio="xMidYMid"
-									>
-										<g>
-											<path
-												d="M471.893228,124.869021 L486.584595,124.869021 L512.003291,60.4528486 L497.461377,60.4528486 L486.954666,92.5352054 L475.885731,60.4528486 L459.654772,60.4528486 L478.981522,106.98223 L471.893228,124.869021 Z M398.974898,75.7443949 L398.974898,108.763792 L384.153059,108.763792 L384.153059,60.4528486 L394.567251,60.4528486 L397.663042,64.6730877 C401.695873,61.2973709 406.011002,59.3260282 410.983247,59.3260282 C417.644534,59.3260282 422.709296,61.2973709 425.805086,66.1770965 C430.307624,62.047003 435.092459,59.3260282 441.191523,59.3260282 C452.635274,59.3260282 459.296562,65.237684 459.296562,81.2788624 L459.296562,108.763792 L444.474722,108.763792 L444.474722,82.967907 C444.474722,75.556987 441.471449,73.3982362 436.686613,73.3982362 C433.87312,73.3982362 431.529334,74.1478684 428.900877,75.8369128 C429.090658,77.5259574 429.183175,79.3075198 429.183175,81.2788624 L429.183175,108.763792 L414.361335,108.763792 L414.361335,82.967907 C414.361335,75.556987 411.358063,73.3982362 406.480709,73.3982362 C403.759734,73.3982362 401.508466,74.0553505 398.974898,75.7443949 L398.974898,75.7443949 Z M347.281122,79.8721161 L366.325573,79.8721161 C365.293643,73.5880165 361.915554,70.5847435 356.850793,70.5847435 C352.533291,70.5847435 348.407942,73.1183103 347.281122,79.8721161 L347.281122,79.8721161 Z M357.882723,109.703204 C343.623107,109.703204 332.176984,102.6671 332.176984,84.0923552 C332.176984,66.7369482 343.248291,59.2335103 356.006271,59.2335103 C371.390335,59.2335103 378.23903,70.0201472 378.23903,87.000738 L347.186232,87.000738 C348.220535,95.3486984 353.380185,97.7897467 360.228882,97.7897467 C366.852214,97.7897467 372.033215,96.1552644 376.042324,93.4580121 L374.030653,105.214901 C370.204208,108.170729 365.611525,109.703204 357.882723,109.703204 L357.882723,109.703204 Z M302.692245,97.227523 C306.067961,97.227523 308.601528,96.6629268 311.227612,94.6939565 L311.227612,73.6805344 C308.883826,72.2714158 306.540039,71.6166738 303.16195,71.6166738 C295.938439,71.6166738 291.810717,76.4940271 291.810717,84.6545793 C291.810717,92.6300958 296.033329,97.227523 302.692245,97.227523 L302.692245,97.227523 Z M314.135996,105.200667 C310.290572,108.10905 305.882925,109.890612 299.596454,109.890612 C286.368767,109.890612 276.801469,101.730061 276.801469,84.9368775 C276.801469,68.2385847 287.777886,59.2335103 301.847722,59.2335103 C305.130921,59.2335103 308.321602,59.7032165 311.227612,60.8276647 L311.227612,40.3219051 L326.051825,40.3219051 L326.051825,108.763792 L316.669562,108.763792 L314.135996,105.200667 Z M213.998429,80.1520421 L213.998429,44.3476193 L229.382493,44.3476193 L229.382493,79.8721161 C229.382493,92.6300958 235.104369,95.2561803 242.984995,95.2561803 C251.522735,95.2561803 255.930383,91.503275 255.930383,79.8721161 L255.930383,44.3476193 L271.409337,44.3476193 L271.409337,80.1520421 C271.409337,101.260354 262.216854,110.078021 242.235363,110.078021 C223.660618,110.078021 213.998429,102.479692 213.998429,80.1520421 L213.998429,80.1520421 Z"
-												fill="#645A53"
-											></path>
-											<path
-												d="M174.790297,82.8367214 C174.166394,82.3361759 173.464207,81.9993159 172.700342,81.8546084 C168.188316,86.3524011 162.682315,91.0897915 157.793101,94.273356 C155.537088,95.7726197 152.699872,96.522252 150.821047,96.522252 C146.496429,96.522252 144.617604,92.3992753 144.053008,85.8447389 C143.301004,77.041306 142.793341,66.496639 142.793341,50.1992572 C142.793341,33.4843587 139.000108,22.1212643 128.894308,21.229297 C128.467302,21.1913409 128.035552,21.1652461 127.584824,21.1652461 C121.381381,21.1652461 118.373363,24.3488104 114.425933,32.4049833 C111.043099,39.3343359 105.77907,49.4496251 96.0053842,68.5557551 C87.5459285,85.0405449 78.14706,99.6512542 70.06242,109.766544 C67.8111513,112.570547 66.0319611,114.496817 64.3595224,115.592798 C63.242191,116.328197 62.1699324,116.695896 61.0407397,116.695896 C57.8500587,116.695896 55.5205058,114.003389 54.7424066,107.733523 C54.5573708,106.243747 54.4601084,104.552331 54.4601084,102.647411 C54.4601084,89.7233732 59.3493229,68.7431631 67.8064068,37.8350717 C74.0098498,15.3579694 71.3790206,0 57.8429419,0 C57.8215917,0 57.8002414,0 57.7788911,0 C57.750424,0 57.721957,0 57.6911178,0 L57.6816287,0.00237225354 C54.6166771,0.0379560566 52.0759936,1.14817072 49.6278279,3.07444059 C47.2176183,4.97224342 44.8050365,9.07149754 42.5537679,14.5822425 C40.0154566,20.79043 24.5815751,51.7483387 0.0168896547,67.6969992 C-0.272525277,73.7604793 3.1601256,79.8215871 10.115573,80.4787014 C16.4471177,81.0788815 20.9425381,78.4100962 26.7308367,74.5219727 C26.2967143,76.4553594 25.8958035,78.2630165 25.5304765,79.9164773 C25.0987263,81.8688419 24.7310271,83.5531419 24.4368676,84.9124432 C23.9956284,86.9359755 23.7157025,88.2383427 23.6326737,88.5989252 C22.8284797,92.2877793 22.2543944,95.7915976 21.8819505,99.1174977 C18.4184603,130.077778 32.768222,145.355091 49.5732661,145.355091 C52.3820143,145.355091 55.1646677,145.020604 57.9283431,144.318417 C76.443782,139.623727 94.2688953,118.384941 115.367718,69.4927952 C115.047464,74.8113877 115.014252,79.7788866 115.244361,84.3881752 C116.634501,112.409234 127.71767,120.816501 143.376915,120.816501 C155.219205,120.816501 166.30949,114.63678 171.948337,106.955423 C176.085547,101.522963 177.776964,95.5282775 177.776964,90.8454493 C177.776964,87.2111569 176.624049,84.3098908 174.790297,82.8367214"
-												fill="#EA5252"
-											></path>
-										</g></svg
-								></a>
-								<a href="https://www.youtube.com/" class="link">
-									<svg
-										width="90px"
-										height="90px"
-										viewBox="0 0 490 490"
-										style="enable-background: new 0 0 490 490"
-										xml:space="preserve"
-									>
-										<g>
-											<g>
-												<path
-													style="fill: #ea4640"
-													d="M480,180v130c0,55.195-44.805,100-100,100H110c-55.195,0-100-44.805-100-100V180
-			c0-55.199,44.805-100,100-100h270C435.195,80,480,124.801,480,180z"
-												/>
-											</g>
-											<g id="XMLID_21_">
-												<g>
-													<polygon
-														style="fill: #ffffff"
-														points="320,245 200,295 200,195 			"
-													/>
-												</g>
-												<g>
-													<path
-														style="fill: #231f20"
-														d="M380,70H110C49.346,70,0,119.346,0,180v130c0,60.654,49.346,110,110,110h270
-				c60.654,0,110-49.346,110-110V180C490,119.346,440.654,70,380,70z M470,310c0,49.626-40.374,90-90,90H110
-				c-49.626,0-90-40.374-90-90V180c0-49.626,40.374-90,90-90h270c49.626,0,90,40.374,90,90V310z"
-													/>
-													<path
-														style="fill: #231f20"
-														d="M323.846,235.769l-120-50c-3.085-1.286-6.611-0.945-9.393,0.911
-				c-2.782,1.854-4.453,4.977-4.453,8.32v100c0,3.344,1.671,6.466,4.453,8.32c1.667,1.112,3.601,1.68,5.548,1.68
-				c1.301,0,2.608-0.254,3.845-0.769l120-50c3.727-1.553,6.154-5.194,6.154-9.231S327.572,237.322,323.846,235.769z M210,280v-70
-				l84,35L210,280z"
-													/>
-												</g>
-											</g>
-										</g></svg
-								></a>
-								<a href="https://frontendmasters.com/" class="link"
-									><img class="link-pic" src="src/img/fr.jpg" alt=""
-								/></a>
-							</div>
-							<h2 class="h2">Kurssi</h2>
-							<p class="main__section-seven__content__text-container-text">
-								Jos en saa työpaikkaa minä voin hakea "ICT Camp - löydä oma
-								polkusi ICT-alalle" kurssiin. Haku päättyy: 22.07.2022 ja
-								Koulutus alkaa: 11.08.2022.
-							</p>
-							<a
-								href="https://koulutukset.te-palvelut.fi/kt/707110?locations=Tampere&&announced=0&sort=1"
-								><button class="button">Linkki kurssiin</button></a
-							>
-							<h2 class="h2">Muut</h2>
-							<p class="main__section-seven__content__text-container-text">
-								Haluaisin oppia espanjaa ja harrastaa enemmän urheilua.
-							</p>
-						</div>
-					</div>
-					<div class="main__section-seven__picture">
-						<img
-							src="src/img/plan.jpg"
-							alt=""
-							class="main__section-seven__picture__image"
-						/>
-					</div>
-				</div>
-				<div class="main__section-eight">
-					<div class="main__section-eight__content">
-						<h1 class="main__section-eight__content__title">Työnhaku</h1>
-						<div class="main__section-eight__content__text-container">
-							<h2 class="h2">
-								Työnhaun kanavat
-							</h2>
-							<p class="main__section-two__content__text-container-text">
-								<ul>
-									<li>
-										Linkedin profiili on päivitetty.
-									</li>
-									<li>
-										Loin oman profiilini työmarkkinatorin sivulle.
-									</li>
-									<li>
-										Rekisteröidyin Rekrytointi.com sivulle ja loin osaajaprofiilin.
-									</li>
-								</ul>
-							</p>
-						</div>
-					</div>
-					<div class="main__section-eight__picture">
-						<img
-							src="src/img/job.jpg"
-							alt=""
-							class="main__section-eight__picture__image"
-						/>
-					</div>
-				</div>
-				<div class="main__section-nine">
-					<div class="main__section-nine__picture">
-						<img
-							src="src/img/business.jpg"
-							alt=""
-							class="main__section-nine__picture__image"
-						/>
-					</div>
-					<div class="main__section-nine__content">
-						<h1 class="main__section-nine__content__title">Mahdolliset avoimet työpaikat</h1>
-						<div class="main__section-nine__content__text-container">
-							<h2 class="h2">
-								Mol.fi, itjobs.ai, finitec.fi 
-							</h2>
-							<p class="main__section-two__content__text-container-text">
-								<ul>
-									<li>
-										Technical Specialist UX design, NOKIA <br><a
-										href="https://itjobs.ai/Finland/job/4550557"
-										><button class="button">Linkki</button></a
-									>
-									</li>
-									<li>
-										Full Stack Engineer, Wunder Finland Oy  <br><a
-										href="https://itjobs.ai/Finland/job/4549317"
-										><button class="button">Linkki </button></a
-									>
-									</li>
-									<li>
-										Fullstack /Frontend Developer (React & Redux)  <br><a
-										href="https://www.finitec.fi/gigs/qDvb20vr"
-										><button class="button">Linkki</button></a
-									>
-									</li>
-									<li>
-										Full Stack Developer  <br><a
-										href="https://www.finitec.fi/gigs/ZoyrQpvE"
-										><button class="button">Linkki</button></a
-									>
-									</li>
-									<li>
-										Front End Developer, Academic Work Consulting Oy, Tampere  <br><a
-										href="https://paikat.te-palvelut.fi/tpt/11434902?locations=Tampere&&announced=0&leasing=0&remotely=0&&&&english=false&sort=1"
-										><button class="button">Linkki</button></a
-									>
-									</li>
-									<li>
-										Frontend Developer, 2 paikkaa, Pihlajalinna Oyj, Tampere  <br><a
-										href="https://paikat.te-palvelut.fi/tpt/11211816?locations=Tampere&&announced=0&leasing=0&remotely=0&&&&english=false&sort=1"
-										><button class="button">Linkki</button></a
-									>
-									</li>
-									<li>
-										Fullstack-kehittäjä, Cinia Oy, Tampere  <br><a
-										href="https://paikat.te-palvelut.fi/tpt/11456135?locations=Tampere&&announced=0&leasing=0&remotely=0&&&&english=false&sort=1"
-										><button class="button">Linkki</button></a
-									>
-									</li>
-								</ul>
-							</p>
-						</div>
-					</div>
-				
-				</div>
 				<div class="main__section-ten">
 					<div class="main__section-ten__content">
 						<h1 class="main__section-ten__content__title">Yhteystiedot</h1>
 						<div class="main__section-ten__content__text-container">
 							<div class="contact-wrapper">
 								<p class="main__section-ten__content__text-container-text">
-								<a href="https://www.linkedin.com/in/mikl%C3%B3s-oravecz-79253a109/"><svg fill= "white" width="40px"
+									<a href="https://github.com/miklosoravecz"><svg class="link-icon" fill= "white" width="40px"	height="40px" viewBox="0 0 496 512"><path d="M165.9 397.4c0 2-2.3 3.6-5.2 3.6-3.3.3-5.6-1.3-5.6-3.6 0-2 2.3-3.6 5.2-3.6 3-.3 5.6 1.3 5.6 3.6zm-31.1-4.5c-.7 2 1.3 4.3 4.3 4.9 2.6 1 5.6 0 6.2-2s-1.3-4.3-4.3-5.2c-2.6-.7-5.5.3-6.2 2.3zm44.2-1.7c-2.9.7-4.9 2.6-4.6 4.9.3 2 2.9 3.3 5.9 2.6 2.9-.7 4.9-2.6 4.6-4.6-.3-1.9-3-3.2-5.9-2.9zM244.8 8C106.1 8 0 113.3 0 252c0 110.9 69.8 205.8 169.5 239.2 12.8 2.3 17.3-5.6 17.3-12.1 0-6.2-.3-40.4-.3-61.4 0 0-70 15-84.7-29.8 0 0-11.4-29.1-27.8-36.6 0 0-22.9-15.7 1.6-15.4 0 0 24.9 2 38.6 25.8 21.9 38.6 58.6 27.5 72.9 20.9 2.3-16 8.8-27.1 16-33.7-55.9-6.2-112.3-14.3-112.3-110.5 0-27.5 7.6-41.3 23.6-58.9-2.6-6.5-11.1-33.3 2.6-67.9 20.9-6.5 69 27 69 27 20-5.6 41.5-8.5 62.8-8.5s42.8 2.9 62.8 8.5c0 0 48.1-33.6 69-27 13.7 34.7 5.2 61.4 2.6 67.9 16 17.7 25.8 31.5 25.8 58.9 0 96.5-58.9 104.2-114.8 110.5 9.2 7.9 17 22.9 17 46.4 0 33.7-.3 75.4-.3 83.6 0 6.5 4.6 14.4 17.3 12.1C428.2 457.8 496 362.9 496 252 496 113.3 383.5 8 244.8 8zM97.2 352.9c-1.3 1-1 3.3.7 5.2 1.6 1.6 3.9 2.3 5.2 1 1.3-1 1-3.3-.7-5.2-1.6-1.6-3.9-2.3-5.2-1zm-10.8-8.1c-.7 1.3.3 2.9 2.3 3.9 1.6 1 3.6.7 4.3-.7.7-1.3-.3-2.9-2.3-3.9-2-.6-3.6-.3-4.3.7zm32.4 35.6c-1.6 1.3-1 4.3 1.3 6.2 2.3 2.3 5.2 2.6 6.5 1 1.3-1.3.7-4.3-1.3-6.2-2.2-2.3-5.2-2.6-6.5-1zm-11.4-14.7c-1.6 1-1.6 3.6 0 5.9 1.6 2.3 4.3 3.3 5.6 2.3 1.6-1.3 1.6-3.9 0-6.2-1.4-2.3-4-3.3-5.6-2z"/></svg></a> &nbsp; GitHub sivu
+									</p>
+								</div>
+							<div class="contact-wrapper">
+								<p class="main__section-ten__content__text-container-text">
+								<a href="https://www.linkedin.com/in/mikl%C3%B3s-oravecz-79253a109/"><svg class="link-icon" fill= "white" width="40px"
 									height="40px" viewBox="0 0 448 512"><path d="M416 32H31.9C14.3 32 0 46.5 0 64.3v383.4C0 465.5 14.3 480 31.9 480H416c17.6 0 32-14.5 32-32.3V64.3c0-17.8-14.4-32.3-32-32.3zM135.4 416H69V202.2h66.5V416zm-33.2-243c-21.3 0-38.5-17.3-38.5-38.5S80.9 96 102.2 96c21.2 0 38.5 17.3 38.5 38.5 0 21.3-17.2 38.5-38.5 38.5zm282.1 243h-66.4V312c0-24.8-.5-56.7-34.5-56.7-34.6 0-39.9 27-39.9 54.9V416h-66.4V202.2h63.7v29.2h.9c8.9-16.8 30.6-34.5 62.9-34.5 67.2 0 79.7 44.3 79.7 101.9V416z"/></svg></a> &nbsp; LinkedIn profiili
 								</p>
 							</div>
 							<div class="contact-wrapper">
 							<p class="main__section-ten__content__text-container-text">
-									<svg fill= "white" width="20px"	height="20px" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M511.2 387l-23.25 100.8c-3.266 14.25-15.79 24.22-30.46 24.22C205.2 512 0 306.8 0 54.5c0-14.66 9.969-27.2 24.22-30.45l100.8-23.25C139.7-2.602 154.7 5.018 160.8 18.92l46.52 108.5c5.438 12.78 1.77 27.67-8.98 36.45L144.5 207.1c33.98 69.22 90.26 125.5 159.5 159.5l44.08-53.8c8.688-10.78 23.69-14.51 36.47-8.975l108.5 46.51C506.1 357.2 514.6 372.4 511.2 387z"/></svg> &nbsp; 040 872 6688
+									<svg fill= "white" width="20px"	height="20px" viewBox="0 0 512 512"><path d="M511.2 387l-23.25 100.8c-3.266 14.25-15.79 24.22-30.46 24.22C205.2 512 0 306.8 0 54.5c0-14.66 9.969-27.2 24.22-30.45l100.8-23.25C139.7-2.602 154.7 5.018 160.8 18.92l46.52 108.5c5.438 12.78 1.77 27.67-8.98 36.45L144.5 207.1c33.98 69.22 90.26 125.5 159.5 159.5l44.08-53.8c8.688-10.78 23.69-14.51 36.47-8.975l108.5 46.51C506.1 357.2 514.6 372.4 511.2 387z"/></svg> &nbsp; 040 872 6688
 								</p>
 							</div>
 							<div class="contact-wrapper">
 							<p class="main__section-ten__content__text-container-text">
-								<svg fill= "white" width="20px"	height="20px" viewBox="0 0 512 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M207.8 20.73c-93.45 18.32-168.7 93.66-187 187.1c-27.64 140.9 68.65 266.2 199.1 285.1c19.01 2.888 36.17-12.26 36.17-31.49l.0001-.6631c0-15.74-11.44-28.88-26.84-31.24c-84.35-12.98-149.2-86.13-149.2-174.2c0-102.9 88.61-185.5 193.4-175.4c91.54 8.869 158.6 91.25 158.6 183.2l0 16.16c0 22.09-17.94 40.05-40 40.05s-40.01-17.96-40.01-40.05v-120.1c0-8.847-7.161-16.02-16.01-16.02l-31.98 .0036c-7.299 0-13.2 4.992-15.12 11.68c-24.85-12.15-54.24-16.38-86.06-5.106c-38.75 13.73-68.12 48.91-73.72 89.64c-9.483 69.01 43.81 128 110.9 128c26.44 0 50.43-9.544 69.59-24.88c24 31.3 65.23 48.69 109.4 37.49C465.2 369.3 496 324.1 495.1 277.2V256.3C495.1 107.1 361.2-9.332 207.8 20.73zM239.1 304.3c-26.47 0-48-21.56-48-48.05s21.53-48.05 48-48.05s48 21.56 48 48.05S266.5 304.3 239.1 304.3z"/></svg>&nbsp; oravecz.miklos@gmail.com
+								<svg fill= "white" width="20px"	height="20px" viewBox="0 0 512 512"><path d="M207.8 20.73c-93.45 18.32-168.7 93.66-187 187.1c-27.64 140.9 68.65 266.2 199.1 285.1c19.01 2.888 36.17-12.26 36.17-31.49l.0001-.6631c0-15.74-11.44-28.88-26.84-31.24c-84.35-12.98-149.2-86.13-149.2-174.2c0-102.9 88.61-185.5 193.4-175.4c91.54 8.869 158.6 91.25 158.6 183.2l0 16.16c0 22.09-17.94 40.05-40 40.05s-40.01-17.96-40.01-40.05v-120.1c0-8.847-7.161-16.02-16.01-16.02l-31.98 .0036c-7.299 0-13.2 4.992-15.12 11.68c-24.85-12.15-54.24-16.38-86.06-5.106c-38.75 13.73-68.12 48.91-73.72 89.64c-9.483 69.01 43.81 128 110.9 128c26.44 0 50.43-9.544 69.59-24.88c24 31.3 65.23 48.69 109.4 37.49C465.2 369.3 496 324.1 495.1 277.2V256.3C495.1 107.1 361.2-9.332 207.8 20.73zM239.1 304.3c-26.47 0-48-21.56-48-48.05s21.53-48.05 48-48.05s48 21.56 48 48.05S266.5 304.3 239.1 304.3z"/></svg>&nbsp; oravecz.miklos@gmail.com
 								</p>
 							</div>
 						</div>
