--- a/index.html
+++ b/index.html
@@ -227,6 +227,9 @@
 							<p>
 							<a href="https://github.com/miklosoravecz/Angular-Auth-App">MEAN-stack project</a>
 						</p>
+							<p>
+							<a href="https://github.com/dabasmaklar/portfolio/tree/main">Portfolio</a>
+						</p>
 						</div>
 					</div>
 				</div>
