--- a/index.html
+++ b/index.html
@@ -24,21 +24,10 @@
 								Olen Miklós Oravecz web-kehittäjä.
 							</p>
 							<p class="main__section-one__content__text-container-text">
-								Minun elemässäni tein paljon erilaisia asioita, töitä ja minulla
-								on erilaisia harrastuksia. En pidä tylsät asiat, olen innokas
-								tietämään tai oppimaan jotain uutta. Olen luova ja tykkään
-								haasteista siksi valitsin IT alan. Olen opiskellut vuonna 2020
-								alusta ohjelmointia, osallistuin "Full-stack coding and Finnish
-								language" kursille Tampereella ja samaan aikaan opiskelin
-								erilaisissa verkkokursseilla.
+								Olen tehnyt elämässäni paljon erilaisia töitä ja minulla on monenlaisia harrastuksia. En pidä tylsistä asioista, olen innokas tietämään tai oppimaan jotain uutta. Olen luova ja tykkään haasteista, siksi valitsin IT-alan. Olen opiskellut vuoden 2020 alusta ohjelmointia, osallistuin "Full-stack coding and Finnish language"-kurssille Tampereella ja samaan aikaan opiskelin erilaisilla verkkokursseilla avoin yliopistossa. 
 							</p>
 							<p class="main__section-one__content__text-container-text">
-								Minun viimeinen työpaikka oli Kahjo Media Oy, joka on pieni
-								startup firma jossa kävin työkokeilussa ja työskentelin
-								full-stack kehittäjänä. Työssäni syväntäsin minun koodarin
-								taidot ja opin paljon uusia asioita mm. pilvipalveluita,
-								tietokannan hallintaa, UI suunnittelua ja graafinen
-								suunnittelua.
+								Minun viimeisin työpaikka oli Kahjo Media Oy, joka on pieni start up-firma, jossa kävin työkokeilussa ja työskentelin full-stack-kehittäjänä. Työssäni syvensin koodarin taitojani ja opin paljon uusia asioita, kuten mm. pilvipalveluita, tietokannan hallintaa, UI-suunnittelua ja graafista suunnittelua.
 							</p>
 						</div>
 					</div>
@@ -145,8 +134,8 @@
 							<p class="main__section-two__content__text-container-text">
 								<i>
 									Olimme kehittämässä suoratoistoalustaa urheiluseuroille. Olen
-									työskennellyt front-endin rakentamisessa react reduxilla ja
-									myös joitain palveluita, joissa on Node back-end. Rakentaa ja
+									työskennellyt front-endin rakentamisessa react reduxilla ja ollut kehittämässä 
+									joitain palveluita, joissa on Node back-end. Rakentaa ja
 									ylläpitää automaatiotestejä Cypressilla. Paikallista
 									kehitysympäristöä hallitaan docker-composella, ja
 									käyttöönottoja hallitaan kubernetesin avulla Google Cloud
@@ -182,7 +171,7 @@
 									>"Miklós on erittäin motivoitunut työntekijä jolla on
 									ykkösprioriteettina työn valmiiksi saattaminen."</i
 								>
-								--lainaus työtodistusta
+								--lainaus työtodistuksesta
 							</p>
 						</div>
 					</div>
@@ -240,7 +229,7 @@
 							<p class="main__section-two__content__text-container-text">
 								<ul>
 									<li>Musiikin tallennus, editointi, ohjelmointi</li>
-									<li>Soitan kitaraa</li>
+									<li>Kitaransoitto</li>
 									<li>Musiikin kuuntelu</li>
 									<li>Ruoanlaitto</li>
 									<li>Matkustaminen</li>
